welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
def marquerSol {baisseBrosse(); leveBrosse();}
def faireV {}
}
for (x<- 1 to 4){
	faireV();
}
